--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,3 +11,4 @@ serde = { version = "1.0", features = ["derive"] }
 actix-web = { version = "0.7", features = ["rust-tls"] }
 quick-error = "1.2"
 rustls = "0.14"
+futures = "0.1"
