--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,4 +14,5 @@ rustls = "0.14"
 futures = "0.1"
 env_logger = "0.6"
 log = "0.4"
-bio = "0.25"
+tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git", rev = "4f084e7b647a26dcaa8da5301be93304cffe092f" }
+redis-async = "0.4"
