--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,7 @@ edition = "2018"
 toml = "0.4"
 clap = { version = "2.0", features = ["yaml"] }
 serde = { version = "1.0", features = ["derive"] }
+serde_json = "1.0"
 actix-web = { version = "0.7", features = ["rust-tls"] }
 quick-error = "1.2"
 rustls = "0.14"
@@ -18,3 +19,4 @@ tokio-postgres = { git = "https://github.com/sfackler/rust-postgres.git", rev = 
 redis-async = "0.4"
 lru-cache = "0.1"
 futures-locks = "0.3"
+bytes = "0.4"
